# image-classification-pytorch

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: 01_mlp.yaml  02_cnn.yaml  03_cnn_bn_drop.yaml  04_vgg.yaml  05_resnet.yaml
configs/ablation/: 01_plain.yaml  02_batchnorm.yaml  03_dropout.yaml  04_weight_decay.yaml  05_all.yaml
data/: README.md  cifar10_sample.npz
notebooks/: demo.ipynb
results/: ablation.json  metrics.json  resnet_checkpoint.pt
scripts/: benchmark.py  download_data.py  make_sample.py  run_all.py
src/imgclf/: __init__.py  config.py  data.py  metrics.py  models.py  train.py
tests/: test_imgclf.py
